NguyenKhoi_commit09:update ThongKeChart

--- a/src/main/resources/templates/user/ThongKe/ThongKe.html
+++ b/src/main/resources/templates/user/ThongKe/ThongKe.html
@@ -37,12 +37,12 @@
             </div>
         </div>
         <div class="col-md-1">
-            <button class="btn btn-dark rounded rounded-circle"><i class="fa-solid fa-magnifying-glass" onclick="serviceThongKe.getDataChart()"></i></button>
+            <button class="btn btn-dark rounded rounded-circle" onclick="serviceThongKe.getDataChart()"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
     </div>
     <div class="row">
-        <div class="col-5"><canvas id="myChart" width="200px" height="100px"></canvas></div>
-        <div class="col"><canvas id="barChart" width="200px" height="100px"></canvas></div>
+        <div class="col-4"><canvas id="myChart" width="200px" height="100px"></canvas></div>
+        <div class="col-8"><canvas id="barChart" width="200px" height="100px"></canvas></div>
     </div>
 </div>
 </body>
