NguyenKhoi_commit10: Update MonHoc and ThongKe

--- a/src/main/resources/templates/user/MonHoc/MonHoc.html
+++ b/src/main/resources/templates/user/MonHoc/MonHoc.html
@@ -22,7 +22,7 @@
                     <input type="text" id="idFilterMaMonHoc" class="form-control">
                 </div>
                 <div class="col-md-1">
-                    <button class="btn btn-dark rounded rounded-circle"><i class="fa-solid fa-magnifying-glass" onclick="serviceMonHoc.getMonHocByMaMonHoc()"></i></button>
+                    <button class="btn btn-dark rounded rounded-circle" onclick="serviceMonHoc.getListMonHoc()"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </div>
             <div class="tableMonHoc">
