--- a/src/main/resources/templates/user/ThongKe/ThongKe.html
+++ b/src/main/resources/templates/user/ThongKe/ThongKe.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{user/index :: dynamic(~{::main})}">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 <head>
 </head>
 <body>
@@ -40,7 +39,7 @@
             <button class="btn btn-dark rounded rounded-circle" onclick="serviceThongKe.getDataChart()"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-top: 20px">
         <div class="col-4"><canvas id="myChart" width="200px" height="100px"></canvas></div>
         <div class="col-8"><canvas id="barChart" width="200px" height="100px"></canvas></div>
     </div>
