QuocVu_Commit08: Fix BangDiem + SinhVien

--- a/src/main/resources/templates/user/BangDiem/BangDiem.html
+++ b/src/main/resources/templates/user/BangDiem/BangDiem.html
@@ -42,13 +42,13 @@
             <div>
                 <table class="table table-responsive table-bordered table-hover border-black" id="tableBangDiem">
                     <thead class="text-center">
-                    <th>No.</th>
-                    <th>MSSV</th>
-                    <th>Họ tên</th>
-                    <th>Lần thi</th>
-                    <th>Môn học</th>
-                    <th>Học kỳ</th>
-                    <th>Điểm</th>
+                    <th class="text-center">No.</th>
+                    <th class="text-center">MSSV</th>
+                    <th class="text-center">Họ tên</th>
+                    <th class="text-center">Lần thi</th>
+                    <th class="text-center">Môn học</th>
+                    <th class="text-center">Học kỳ</th>
+                    <th class="text-center">Điểm</th>
                     </thead>
                     <tbody class="tableBangDiem"></tbody>
                 </table>
@@ -66,13 +66,13 @@
             </div>
             <div class="mb-3">
                 <label for="idMonHoc" class="form-label fw-bold">Môn học</label>
-                <input type="text" class="form-control" id="idMonHoc">
+                <select id="idMonHoc" class="form-select"></select>
             </div>
             <div class="row">
                 <div class="col-6">
                     <div class="mb-3">
                         <label for="idHocKy" class="form-label fw-bold">Học kỳ</label>
-                        <input type="text" class="form-control" id="idHocKy">
+                        <select id="idHocKy" class="form-select"></select>
                     </div>
                 </div>
                 <div class="col-6">
